2005-01-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/user32.def (MonitorFromPoint}: Correct suffix.

2005-01-13  Benoit Blanchon  <bblanchon@users.sourceforge.net>

	* include/wininet.h (InternetCheckConnectionA,
	InternetCheckConnectionW) Add prototypes.
	(INTERNET_RAS_INSTALLED, INTERNET_CONNECTION_OFFLINE,
	INTERNET_CONNECTION_CONFIGURED): Add defines.

2005-01-07  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/commctrl.h (ComboBox_SetMinVisible,
	ComboBox_GetMinVisible): Added Macros.
	* include/winuser.h (CB_SETMINVISIBLE, CB_GETMINVISIBLE):
	Added definitions.

2005-01-02  Jiri Malak  <Jiri.Malak@geac.cz>

	* include/winnt.h (GetCurrentFiber, GetFiberData): Make inline
	assembly code conditional on _X86_.

2005-01-02  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h: Increment version.
	* Makefile.in: Ditto.
	* include/afxres.h: Remove the \r from the line ending.
	* include/errorrep.h: Ditto.
	* include/shldisp.h: Ditto.
	* include/tschema.h: Ditto.
	* lib/dhcpcsvc.def: Ditto.
	* lib/uxtheme.def: Ditto.
	* lib/wldap32.def: Ditto.

2005-01-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winerror.h (ERROR_EXE_CANNOT_MODIFY_STRONG_SIGNED_BINARY):
	Correct typo.
	Thanks to: Aidan France  <aidan1@users.sourceforge.net>

2004-12-29 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	*include/winuser.h (MNS_*, WM_MENUCOMMAND,
	WM_MENUGETOBJECT, WM_MENUDRAG, WM_NCMOUSEHOVER,
	WM_NCMOUSELEAVE, WM_UNINITMENUPOPUP,
	SPI_GETFOREGROUNDLOCKTIMEOUT,
	SPI_SETFOREGROUNDLOCKTIMEOUT): Added definitions.
	*include/imm.h (WM_IME_REQUEST): Added definition.
	*include/shlobj.h (SLGP_RAWPATH,
	SLGP_UNCPRIORITY): Added definition.

2004-12-28 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	*include/winuser.h (HSHELL_FLASH): Added definition.

2004-12-23  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shldisp.h (IAutoComplete): Added interface definiton.