@@ -115,7 +115,10 @@ extern "C" {
 #define OFN_SHAREFALLTHROUGH 2
 #define OFN_SHARENOWARN 1
 #define OFN_SHAREWARN 0
-#define OFN_NODEREFERENCELINKS	0x100000
+#define OFN_NODEREFERENCELINKS 0x100000
+#if (_WIN32_WINNT >= 0x0500)
+#define OFN_DONTADDTORECENT 0x02000000
+#endif
 #define FR_DIALOGTERM 64
 #define FR_DOWN 1
 #define FR_ENABLEHOOK 256
